refactor: replace string concatenation with `.formatted()` for improved readability and consistency
- Updated `RateLimitInterceptor` and `GlobalExceptionHandler` to use `.formatted()` for string interpolation.
- Revised `SendCodeUseCase` to prefer `.formatted()` over `String.format()` or concatenation.
- Updated coding conventions in `CLAUDE.md` to reflect preferred string building practices.